--- a/rtt_actionlib_examples/CMakeLists.txt
+++ b/rtt_actionlib_examples/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 2.8.3)
 project(rtt_actionlib_examples)
 
 find_package(catkin REQUIRED COMPONENTS
-  roscpp rtt_ros actionlib rtt_actionlib actionlib_msgs genmsg rtt_roscomm)
+  roscpp rtt_ros actionlib rtt_actionlib actionlib_msgs rtt_actionlib_msgs genmsg rtt_roscomm)
 
 find_package(OROCOS-RTT REQUIRED rtt-marshalling rtt-scripting)
 include(${OROCOS-RTT_USE_FILE_PATH}/UseOROCOS-RTT.cmake)
@@ -12,7 +12,7 @@ generate_messages(DEPENDENCIES actionlib_msgs)
 
 catkin_package(
   DEPENDS rtt ocl
-  CATKIN_DEPENDS roscpp rtt_roscomm rtt_actionlib actionlib_msgs)
+  CATKIN_DEPENDS roscpp rtt_roscomm rtt_actionlib actionlib_msgs rtt_actionlib_msgs)
 
 ros_generate_rtt_typekit(${PROJECT_NAME})
 
