--- a/rtt_actionlib_examples/package.xml
+++ b/rtt_actionlib_examples/package.xml
@@ -18,6 +18,7 @@
   <build_depend>rtt_ros</build_depend>
   <build_depend>rtt_roscomm</build_depend>
   <build_depend>rtt_actionlib</build_depend>
+  <build_depend>rtt_actionlib_msgs</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>actionlib</build_depend>
   <build_depend>actionlib_msgs</build_depend>
@@ -28,6 +29,7 @@
   <run_depend>rtt_ros</run_depend>
   <run_depend>rtt_roscomm</run_depend>
   <run_depend>rtt_actionlib</run_depend>
+  <run_depend>rtt_actionlib_msgs</run_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>actionlib</run_depend>
   <run_depend>actionlib_msgs</run_depend>
