--- a/rtt_actionlib_examples/package.xml
+++ b/rtt_actionlib_examples/package.xml
@@ -24,7 +24,7 @@
   <build_depend>roscpp</build_depend>
   <build_depend>actionlib</build_depend>
   <build_depend>actionlib_msgs</build_depend>
-  <build_depend>messge_generation</build_depend>
+  <build_depend>message_generation</build_depend>
 
   <run_depend>ocl</run_depend>
   <run_depend>rtt</run_depend>
