updating to use automatic orocos-using

--- a/rtt_actionlib_examples/CMakeLists.txt
+++ b/rtt_actionlib_examples/CMakeLists.txt
@@ -4,17 +4,12 @@ project(rtt_actionlib_examples)
 find_package(catkin REQUIRED COMPONENTS
   roscpp rtt_ros actionlib rtt_actionlib actionlib_msgs rtt_actionlib_msgs genmsg rtt_roscomm)
 
-find_package(OROCOS-RTT REQUIRED rtt-marshalling rtt-scripting)
-include(${OROCOS-RTT_USE_FILE_PATH}/UseOROCOS-RTT.cmake)
-
 add_action_files(DIRECTORY action FILES SomeAction.action)
 generate_messages(DEPENDENCIES actionlib_msgs)
 
 ros_generate_rtt_typekit(${PROJECT_NAME})
 
-catkin_package(
-  DEPENDS rtt ocl
-  CATKIN_DEPENDS roscpp rtt_roscomm rtt_actionlib actionlib_msgs rtt_actionlib_msgs)
+catkin_package()
 
 include_directories(include ${catkin_INCLUDE_DIRS} ${BOOST_INCLUDE_DIRS})
 
