--- a/rtt_actionlib_examples/package.xml
+++ b/rtt_actionlib_examples/package.xml
@@ -18,6 +18,7 @@
   <build_depend>ocl-taskbrowser</build_depend>
   <build_depend>rtt</build_depend>
   <build_depend>rtt_ros</build_depend>
+  <build_depend>rtt_rosclock</build_depend>
   <build_depend>rtt_roscomm</build_depend>
   <build_depend>rtt_actionlib</build_depend>
   <build_depend>rtt_actionlib_msgs</build_depend>
@@ -29,6 +30,7 @@
   <run_depend>ocl</run_depend>
   <run_depend>rtt</run_depend>
   <run_depend>rtt_ros</run_depend>
+  <run_depend>rtt_rosclock</run_depend>
   <run_depend>rtt_roscomm</run_depend>
   <run_depend>rtt_actionlib</run_depend>
   <run_depend>rtt_actionlib_msgs</run_depend>
